[package]
name = "openssl_enc"
version = "0.1.0"
authors = ["shockron22 <jake@mccoy.engineer>"]
edition = "2018"
license = "MIT"
description = "An Implementation of openssl enc functionality"
homepage = "https://github.com/shockron22/openssl_enc"
repository = "https://github.com/shockron22/openssl_enc"
readme = "README.md"
keywords = ["openssl", "encryption", "decryption", "enc"]
categories = ["cryptography", "encoding"]


[dependencies]
openssl = "0.10"
ring = "0.16.11"
